# Sparse_MultiFrontal

./: CMakeLists.txt  README.md  patch_Eigen_3.2.4.diff
IML/include/: diag_IML_Precond.hpp  fastSparse_IML_Precond.hpp  gmres.h
IML/test/: CMakeLists.txt  test.cpp
IML_Sparse/include/: Eigen_IML.hpp~  Eigen_IML_Matrix.hpp~  Eigen_IML_Vector.hpp~  fastSparse_IML_Precond.hpp~  gmres.h
IML_Sparse/test/: CMakeLists.txt  CMakeLists.txt~  Makefile~  test.cpp  test.cpp~
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: FindCppUnit.cmake  FindHODLR.cmake  FindMpi.cmake  FindScotch.cmake  FindScotch.cmake~
doc/: Doxyfile  documentation.hpp
include/: eliminationTree.hpp  extendAdd.hpp  helperFunctions.hpp  interfaceEigen.hpp  output.hpp  sparseMF.hpp  testSolve.hpp  timer.hpp
src/: CMakeLists.txt  eliminationTree.cpp  extendAdd.cpp  helperFunctions.cpp  interfaceEigen.cpp  matrixIO.cpp  sparseMF.cpp  timer.cpp
test/: CMakeLists.txt  test.cpp
